--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.3",
     "firebase": "9.22.0",
     "firebaseui": "^6.0.2",
+    "jodit-react": "^1.3.39",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "next": "13.4.3",
