--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uniqid": "^5.4.0"
+  },
+  "devDependencies": {
+    "@types/uniqid": "^5.3.2"
   }
 }
